add content to delete_contacts.html.twig, including message saying that the contacts were deleted, and a button to refer user back to homepage

--- a/views/create_contacts.html.twig
+++ b/views/create_contacts.html.twig
@@ -7,7 +7,7 @@
     <p>Name: {{ newcontact.getName }}</p>
       <ul>
         <li>Phone number: {{ newcontact.getPhone }} </li>
-        <li>Address: {{ newcontact.getAdress }} </li>
+        <li>Address: {{ newcontact.getAddress }} </li>
       </ul>
     <p><a href='/'>View all the jobs you've listed.</a></p>
 </body>
