clean up create_contacts.html.twig

--- a/views/create_contacts.html.twig
+++ b/views/create_contacts.html.twig
@@ -9,6 +9,6 @@
         <li>Phone number: {{ newcontact.getPhone }} </li>
         <li>Address: {{ newcontact.getAddress }} </li>
       </ul>
-    <p><a href='/'>View all the jobs you've listed.</a></p>
+    <p><a href='/'>View all the contacts you've listed.</a></p>
 </body>
 </html>
